// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchButton renders correctly 1`] = `
<DocumentFragment>
  .cache-vh4sqg-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 8px;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #4f0599;
  color: #4f0599;
  border: none;
  color: #4f0599;
  height: 40px;
  padding: 8px 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  background: #4f0599;
  color: #ffffff;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='false'] {
  cursor: pointer;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  border: 1px solid #4f0599;
  box-shadow: none;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard input+svg {
  display: none;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  background: #eeeeff;
  border: none;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  background: #390171;
  border: none;
}

.cache-h7u1sr-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-h7u1sr-StyledRadio+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-h7u1sr-StyledRadio[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-h7u1sr-StyledRadio[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  border: none;
  color: #4f0599;
  height: 40px;
  padding: 8px 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='false'] {
  cursor: pointer;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  border: 1px solid #4f0599;
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard input+svg {
  display: none;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  background: #eeeeff;
  border: none;
}

<div
    class="cache-vh4sqg-BorderedBox-StyledBorderedBox e16krxq01"
  >
    <label
      aria-disabled="false"
      class="e16krxq00 ejleepd0 e1duuirp0 e1g1zfwd0 cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard"
      for="test-left"
    >
      <input
        aria-checked="true"
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-h7u1sr-StyledRadio e1duuirp1"
        id="test-left"
        name="test"
        tabindex="0"
        type="radio"
        value="left"
      />
      <svg
        class="cache-gjpbat-StyledIcon e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Left choice
    </label>
    <label
      aria-disabled="false"
      class="e16krxq00 ejleepd0 e1duuirp0 e1g1zfwd0 cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard"
      for="test-right"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-invalid="false"
        class="cache-h7u1sr-StyledRadio e1duuirp1"
        id="test-right"
        name="test"
        tabindex="0"
        type="radio"
        value="right"
      />
      <svg
        class="cache-gjpbat-StyledIcon e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Right choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with right value selected 1`] = `
<DocumentFragment>
  .cache-vh4sqg-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 8px;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  border: none;
  color: #4f0599;
  height: 40px;
  padding: 8px 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='false'] {
  cursor: pointer;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  border: 1px solid #4f0599;
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard input+svg {
  display: none;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  background: #eeeeff;
  border: none;
}

.cache-h7u1sr-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-h7u1sr-StyledRadio+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-h7u1sr-StyledRadio[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-h7u1sr-StyledRadio[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #4f0599;
  color: #4f0599;
  border: none;
  color: #4f0599;
  height: 40px;
  padding: 8px 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  background: #4f0599;
  color: #ffffff;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='false'] {
  cursor: pointer;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  border: 1px solid #4f0599;
  box-shadow: none;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard input+svg {
  display: none;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  background: #eeeeff;
  border: none;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  background: #390171;
  border: none;
}

<div
    class="cache-vh4sqg-BorderedBox-StyledBorderedBox e16krxq01"
  >
    <label
      aria-disabled="false"
      class="e16krxq00 ejleepd0 e1duuirp0 e1g1zfwd0 cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard"
      for="test-left"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-invalid="false"
        class="cache-h7u1sr-StyledRadio e1duuirp1"
        id="test-left"
        name="test"
        tabindex="0"
        type="radio"
        value="left"
      />
      <svg
        class="cache-gjpbat-StyledIcon e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Left choice
    </label>
    <label
      aria-disabled="false"
      class="e16krxq00 ejleepd0 e1duuirp0 e1g1zfwd0 cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard"
      for="test-right"
    >
      <input
        aria-checked="true"
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-h7u1sr-StyledRadio e1duuirp1"
        id="test-right"
        name="test"
        tabindex="0"
        type="radio"
        value="right"
      />
      <svg
        class="cache-gjpbat-StyledIcon e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Right choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton renders with tooltip 1`] = `
<DocumentFragment>
  .cache-vh4sqg-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 8px;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #4f0599;
  color: #4f0599;
  border: none;
  color: #4f0599;
  height: 40px;
  padding: 8px 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  background: #4f0599;
  color: #ffffff;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='false'] {
  cursor: pointer;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  border: 1px solid #4f0599;
  box-shadow: none;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard input+svg {
  display: none;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  background: #eeeeff;
  border: none;
}

.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  background: #390171;
  border: none;
}

.cache-h7u1sr-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-h7u1sr-StyledRadio+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-h7u1sr-StyledRadio[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-h7u1sr-StyledRadio[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  border: none;
  color: #4f0599;
  height: 40px;
  padding: 8px 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='false'] {
  cursor: pointer;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  border: 1px solid #4f0599;
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard input+svg {
  display: none;
}

.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:hover,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:focus-within,
.cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard:active {
  background: #eeeeff;
  border: none;
}

<div
    aria-describedby="tooltip-6c756c756c756c756c756c756c756c75"
  >
    <div
      class="cache-vh4sqg-BorderedBox-StyledBorderedBox e16krxq01"
    >
      <label
        aria-disabled="false"
        class="e16krxq00 ejleepd0 e1duuirp0 e1g1zfwd0 cache-g9piib-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard"
        for="test-left"
      >
        <input
          aria-checked="true"
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="cache-h7u1sr-StyledRadio e1duuirp1"
          id="test-left"
          name="test"
          tabindex="0"
          type="radio"
          value="left"
        />
        <svg
          class="cache-gjpbat-StyledIcon e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-p50c5x-InnerCircleRing e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-ivayk3-RadioMark e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
        Left choice
      </label>
      <label
        aria-disabled="false"
        class="e16krxq00 ejleepd0 e1duuirp0 e1g1zfwd0 cache-su3h60-StyledText-variantStyles-StyledRadioContainer-StyledElement-StyledSelectableCard"
        for="test-right"
      >
        <input
          aria-checked="false"
          aria-disabled="false"
          aria-invalid="false"
          class="cache-h7u1sr-StyledRadio e1duuirp1"
          id="test-right"
          name="test"
          tabindex="0"
          type="radio"
          value="right"
        />
        <svg
          class="cache-gjpbat-StyledIcon e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-p50c5x-InnerCircleRing e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-ivayk3-RadioMark e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
        Right choice
      </label>
    </div>
  </div>
</DocumentFragment>
`;
